--- a/atm.html
+++ b/atm.html
@@ -28,7 +28,7 @@
             </div>
         <div class="side-walk-t">
             <div class="card">
-                <img src="" alt="">
+                <img src="images/cardphoto.PNG">
             </div>
         </div>
 
